--- a/requirements.txt
+++ b/requirements.txt
@@ -5,34 +5,18 @@ aiohttp==3.11.18
 aiosignal==1.4.0
 annotated-types==0.7.0
 attrs==25.3.0
-cachetools==5.5.2
 certifi==2025.8.3
-charset-normalizer==3.4.3
 frozenlist==1.7.0
-google-api-core==2.25.1
-google-api-python-client==2.182.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
-googleapis-common-protos==1.70.0
-httplib2==0.31.0
 idna==3.10
+lxml==6.0.2
 magic-filter==1.0.12
 multidict==6.6.4
-oauthlib==3.3.1
+pillow==11.3.0
 propcache==0.3.2
-proto-plus==1.26.1
-protobuf==6.32.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
 pydantic==2.10.6
 pydantic_core==2.27.2
-pyparsing==3.2.5
 python-dotenv==1.1.1
-requests==2.32.5
-requests-oauthlib==2.0.0
-rsa==4.9.1
+python-pptx==0.6.21
 typing_extensions==4.15.0
-uritemplate==4.2.0
-urllib3==2.5.0
+xlsxwriter==3.2.9
 yarl==1.20.1
